/*
 * Copyright 2017-present Open Networking Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
option java_package = "org.onosproject.grpc.net.meter.models";

package net.meter;

enum MeterUnitProto {
    /**
    * Packets per second.
    */
    PKTS_PER_SEC = 0;

    /**
    * Kilo bits per second.
    */
    KB_PER_SEC = 1;

    /**
    * Bytes per second.
    */
    BYTES_PER_SEC = 2;
}

enum MeterStateProto {
    /**
    * The meter is in the process of being added.
    */
    PENDING_ADD = 0;

    /**
    * THe meter has been added.
    */
    ADDED = 1;

    /**
    * The meter is in the process of being removed.
    */
    PENDING_REMOVE = 2;
}

enum MeterRequestTypeProto {
    ADD = 0;
    MODIFY = 1;
    REMOVE = 2;
}

enum MeterEventTypeProto {
     /**
     * A meter addition was requested.
     */
     METER_ADD_REQ = 0;

     /**
     * A meter removal was requested.
     */
     METER_REM_REQ = 1;

     /**
     * A meter was finally added to device.
     */
     METER_ADDED = 2;

     /**
     * A meter was finally removed from device.
     */
      METER_REMOVED = 3;
}